# inzwa

./: .cursorrules  .gitignore  Dockerfile  Makefile  README.md  TASKS.md  check_alignment.py  go.mod  pyproject.toml  run_tests.sh
.github/workflows/: ci.yml  ci.yml.disabled
cmd/inzwa-dev/: main.go
docs/: api.md  architecture.md  configuration.md  data.md  deployment.md  development.md  latency.md  mlops.md  roadmap.md  security-privacy.md  system-design.md  technical-specs.md
docs/tasks/: phase1-2.md  phase3-4.md  phase5-6.md  phase7-8.md
python/: pyproject.toml
scripts/: collect_data.py  download_models.py  train_llm.py
src/inzwa/: __init__.py
src/inzwa/api/: __init__.py  app.py  auth.py  websocket.py
src/inzwa/api/routers/: __init__.py  admin.py  asr.py  chat.py  tts.py
src/inzwa/asr/: __init__.py  engine.py  vad.py
src/inzwa/config/: __init__.py
src/inzwa/llm/: __init__.py  engine.py  safety.py
src/inzwa/models/: __init__.py  registry.py
src/inzwa/ops/: __init__.py  logging.py  metrics.py  settings.py
src/inzwa/orch/: __init__.py  orchestrator.py  session.py
src/inzwa/orchestration/: __init__.py  backpressure.py  state.py
src/inzwa/telemetry/: __init__.py
src/inzwa/tts/: __init__.py  engine.py
src/inzwa/utils/: __init__.py  audio.py
tests/: test_api.py  test_phase1_api.py
ts/: package.json
